Fix (PS interpreter) Discontinue the interpretation on interrupt.

DETAILS :

Bug 688817 "Endless 'interrupt in interrupt' with GSAPI".

When a GSAPI client tries to stop GS by returning a negative value
from the polling callback function, GS enters an infinite loop
handling cascading "interrupt" exceptions.

Thanks to SaGS for the patch.

EXPECTED DIFFERENCES :

None.

git-svn-id: http://svn.ghostscript.com/ghostscript/trunk@7633 a1074d23-0009-0410-80fe-cf8c14f379e6